--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-
+"Персональна сторінка[Шостак Олександр Петрович]"
+Автобіографія:Мене звати Шостак Олександр.
+Сьогодення:Я навчаюсь у Прикарпатському університеті.
+Народився і живу у Івано-Франківську.
+Друзі:У мене невелике коло спілкування,проте друзів вдосталь.
+Галерея:...
