--- a/biography.html
+++ b/biography.html
@@ -1,1 +1,15 @@
-
+Автобіографія[Шостак О. П.]
+"Назад на головну"
+Зміст:
+«Базова інформація»,Мене звати Шостак Олександр.
+Я навчаюсь у Прикарпатському університеті.
+«до змісту».
+«Дитинство»,Народився і проживаю в Івано-Франківську.
+«до змісту».
+«Шкільні роки»,Навчався в 23 ліцеї імені Р. Гурика.
+«до змісту».
+«Поза школою» Після закінчення школи продовжую спілкування з колишніми однокласниками.
+«до змісту».
+«Університет».В університеті стараюсь здобути потібні знання для подальшої праці в IT.
+«до змісту».
+«Уверх».
