--- a/gallery.html
+++ b/gallery.html
@@ -1,1 +1,7 @@
-
+Галерея Шостака Олександра Петровича
+«Назад на головну»
+«Мої зображення»
+«Зображення у цій папці»
+«Зображення у папці»
+«Зображення онлайн»
+© 2021 GitHub, Inc.
