--- a/index.html
+++ b/index.html
@@ -4,3 +4,27 @@
 Народився і живу у Івано-Франківську.
 Друзі:У мене невелике коло спілкування,проте друзів вдосталь.
 Галерея:...
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<meta charset="utf-8">
+  		<title>22.09.2021</title>
+ 	</head>
+
+ 	<body>
+
+ 		<h1>Персональна сторінка Шостака Олександра Петровича</h1>
+ 		<p> <a href="index.html">Назад на головну</a> </p>
+ 		<h2> Зміст: </h2>
+
+
+ 		<p>Мене звати Шостак Олександр.</p>
+ 		<p>Я навчаюсь у Прикарпатському університеті.</p>
+ 		<p>Народився і живу у Івано-Франківську.</p>
+ 		<p>У мене невелике коло спілкування,проте друзів вдосталь.</p>
+ 		<a href="biography.html">Автобіографія </a>
+ 		<a href="Novadays.html">Сьогодення </a>
+ 		<a href="gallery.html">Галерея</a>
+ 		<a href="Friends.html">Друзі</a>
+</body>
+</html>
