--- a/biography.html
+++ b/biography.html
@@ -13,3 +13,33 @@
 «Університет».В університеті стараюсь здобути потібні знання для подальшої праці в IT.
 «до змісту».
 «Уверх».
+<!DOCTYPE HTML>
+<head>
+		<meta charset="utf-8">
+  		<title>22.09.2021</title>
+ 	</head>
+ 	<body>
+ 		<h1>Біографія Шостака Олександра Петровича</h1>
+ 		<p> <a href="index.html">Назад на головну</a> </p>
+ 		<h2> Зміст: </h2>
+ 		<h3>Базова інформація:</h3>
+ 		<p>Мене звати Шостак Олександр.Я навчаюсь у Прикарпатському університеті.</p>
+ 		<p> До Змісту </p>
+ 		<h3>Дитинство</h3>
+ 		<p>Народився і проживаю в Івано-Франківську.</p>
+ 		<p> До Змісту </p>
+ 		<h3>Шкільні роки</h3>
+ 		<p>Навчався в 23 ліцеї імені Р. Гурика.</p>
+ 		<p> До Змісту </p>
+ 		<h3>Поза школою</h3>
+ 		<p>Після закінчення школи продовжую спілкування з колишніми однокласниками.</p>
+ 		<p> До Змісту </p>
+ 		<h3>Університет</h3>
+ 		<p>В університеті стараюсь здобути потібні знання для подальшої праці в IT.</p>
+ 		<p> До Змісту </p>
+ 		<p> <a href="index.html">Уверх</a> </p>
+
+ 		
+ 	</body>
+ 	</html>
+sublime
