--- a/biography.html
+++ b/biography.html
@@ -1,45 +1,39 @@
-Автобіографія[Шостак О. П.]
-"Назад на головну"
-Зміст:
-«Базова інформація»,Мене звати Шостак Олександр.
-Я навчаюсь у Прикарпатському університеті.
-«до змісту».
-«Дитинство»,Народився і проживаю в Івано-Франківську.
-«до змісту».
-«Шкільні роки»,Навчався в 23 ліцеї імені Р. Гурика.
-«до змісту».
-«Поза школою» Після закінчення школи продовжую спілкування з колишніми однокласниками.
-«до змісту».
-«Університет».В університеті стараюсь здобути потібні знання для подальшої праці в IT.
-«до змісту».
-«Уверх».
 <!DOCTYPE HTML>
+<html leng="ua">
 <head>
 		<meta charset="utf-8">
   		<title>22.09.2021</title>
  	</head>
  	<body>
- 		<h1>Біографія Шостака Олександра Петровича</h1>
+ 		<center><h1>Автобіографія Шостака Олександра Петровича</h1></center>
  		<p> <a href="index.html">Назад на головну</a> </p>
- 		<h2> Зміст: </h2>
- 		<h3>Базова інформація:</h3>
+ 		<li><a href="biography.html">Автобіографія </a></li>
+ 		<li><a href="Novadays.html">Сьогодення </a></li>
+ 		<li><a href="gallery.html">Галерея</a></li>
+ 		<li><a href="Friends.html">Друзі</a></li>
+ 		
+ 		<p id="zmist"><h2> Зміст: </h2></p>
+
+ 		<article id="info"><h3>Базова інформація:</h3>
  		<p>Мене звати Шостак Олександр.Я навчаюсь у Прикарпатському університеті.</p>
- 		<p> До Змісту </p>
+ 		<p> До Змісту </p></article>
+ 		<a href=" zmist">До Змісту</a>
+
  		<h3>Дитинство</h3>
  		<p>Народився і проживаю в Івано-Франківську.</p>
- 		<p> До Змісту </p>
+ 		<a href=" zmist">До Змісту</a>
  		<h3>Шкільні роки</h3>
  		<p>Навчався в 23 ліцеї імені Р. Гурика.</p>
- 		<p> До Змісту </p>
+ 		<a href=" zmist">До Змісту</a>
  		<h3>Поза школою</h3>
  		<p>Після закінчення школи продовжую спілкування з колишніми однокласниками.</p>
- 		<p> До Змісту </p>
+ 		<a href=" zmist">До Змісту</a>
  		<h3>Університет</h3>
  		<p>В університеті стараюсь здобути потібні знання для подальшої праці в IT.</p>
- 		<p> До Змісту </p>
+ 		<a href=" zmist">До Змісту</a>
  		<p> <a href="index.html">Уверх</a> </p>
 
  		
  	</body>
  	</html>
-sublime
+
