--- a/Friends.html
+++ b/Friends.html
@@ -1,9 +1,55 @@
-Друзі Шостака О.П.
-«Назад на головну»
-«Мої друзі»
-Прізвище      Ім'я      Дата народження      Адреса проживання     Контактний телефон
-Савка         Павло     06.06.2004           Ленкавського 19       0950847125
-Совтсік       Дмитро    14.03.2004           Кривоноса 42          0989024765
-Кукудяк       Марія     21.09.2004           Сковороди 14          0950932354
-Біла          Софія     06.09.2004           Незалежності 45       0956745268
-© 2021 GitHub, Inc.
+<!DOCTYPE HTML>\
+<html leng="ua">
+<head>
+		<meta charset="utf-8">
+  		<title>22.09.2021</title>
+ 	</head>
+ 	<body>
+ 		<center><h1>Друзі Шостака Олександра Петровича</h1></center>
+ 		<p><a href="index.html">Назад на головну</a></p>
+ 		<h2>Мої друзі</h2>
+ 		<h3> Table </h3>
+ 		<div>
+ 			<table>
+ 				<caption>Table caption</caption>
+ 		<tr>
+ 			<th>Прізвище</th>
+ 			<th>Ім'я </th>
+ 			<th>Дата народження</th>
+ 			<th>Адреса проживання</th>
+ 			<th>Контактний телефон</th>
+ 		</tr>
+ 		<tr>
+ 			<td>Савка</td>
+ 			<td>Павло</td>
+ 			<td>06.06.2004</td>
+ 			<td>Ленкавського 19</td>
+ 			<td>0950847125</td>
+ 		</tr>
+ 		<tr>
+ 			<td>Совтсік</td>
+ 			<td>Дмитро</td>
+ 			<td>14.03.2004</td>
+ 			<td>Кривоноса 42</td>
+ 			<td>0989024765</td>
+ 		</tr>
+ 		<tr>
+ 			<td>Кукудяк</td>
+ 			<td>Марія</td>
+ 			<td>21.09.2004</td>
+ 			<td>Сковороди 14</td>
+ 			<td>0950932354</td>
+ 		</tr>
+ 		<tr>
+ 			<td>Біла</td>
+ 			<td>Софія</td>
+ 			<td>06.09.2004</td>
+ 			<td>Незалежності 45</td>
+ 			<td>0956745268</td>
+ 		</tr>
+ 	</table>
+ </div>
+</body>
+</html>
+
+
