--- a/Novadays.html
+++ b/Novadays.html
@@ -1,24 +1,40 @@
-Сьогодення Шостак О. П.
-"Назад на головну"
-«Мій типовий список покупок».
-1.Фрукти , овочі:
-а.яблука
-б.банани 
-в.кавун
-2.Крупи:
-а.гречка
-б.рис
-в.пшоно
-3.Молочні продукти:
-а.молоко
-б.сметана
-в.масло
-«Медівник»
-Підготовка:
-1.Яблука почистити і накраяти пластинками. 
-2. Яйця сполучити з цукром і збити до світлої пишної маси (приблизно 5 хвилин).
-3.Докласти мед, соду, а через 1 хвилину збивання — пересіяне борошно. 
-4.Перемішати все до однорідної маси.
-Випікання:
-1.Викласти тісто у змащену жиром довгу кексову форму
-2.Випікати при 180*С 40-45 хвилин до сухої скіпки.
+<!DOCTYPE HTML>
+<html leng="ua">
+	<head>
+		<meta charset="utf-8">
+  		<title>22.09.2021</title>
+ 	</head>
+
+ 	<body>
+ 		<h1>Сьогодення Шостака Олександра Петровича.</h1>
+ 		<p><a href="index.html">Назад на головну</a></p>
+
+ 		<h2>Мій типовий список покупок</h2>
+
+ 		<h3> Фрукти , овочі:</h3>
+ 		<p>яблука</p>
+ 		<p>банани</p>
+ 		<p>кавун</p>
+
+ 		<h3>Крупи:</h3>
+ 		<p>гречка</p>
+ 		<p>рис</p>
+ 		<p>пшоно</p>
+
+ 		<h3>Молочні продукти:</h3>
+ 		<p>молоко</p>
+ 		<p>сметана</p>
+ 		<p>масло</p>
+ 		
+		<h3>Медівник:</h3>
+ 		<h2>Підготовка:</h2>
+ 		<p>Яблука почистити і накраяти пластинками</p>
+ 		<p>Яйця сполучити з цукром і збити до світлої пишної маси (приблизно 5 хвилин)</p>
+ 		<p>Докласти мед, соду, а через 1 хвилину збивання — пересіяне борошно</p>
+		<p>Перемішати все до однорідної маси</p>
+		<h2>Випікання:</h2>
+		<p>Викласти тісто у змащену жиром довгу кексову форму</p>
+		<p>Випікати при 180*С 40-45 хвилин до сухої скіпки</p>
+		
+	</body>
+</html>
