--- a/index.html
+++ b/index.html
@@ -1,11 +1,5 @@
-"Персональна сторінка[Шостак Олександр Петрович]"
-Автобіографія:Мене звати Шостак Олександр.
-Сьогодення:Я навчаюсь у Прикарпатському університеті.
-Народився і живу у Івано-Франківську.
-Друзі:У мене невелике коло спілкування,проте друзів вдосталь.
-Галерея:...
 <!DOCTYPE HTML>
-<html>
+<html leng="ua">
 	<head>
 		<meta charset="utf-8">
   		<title>22.09.2021</title>
