--- a/gallery.html
+++ b/gallery.html
@@ -1,7 +1,21 @@
-Галерея Шостака Олександра Петровича
-«Назад на головну»
-«Мої зображення»
-«Зображення у цій папці»
-«Зображення у папці»
-«Зображення онлайн»
-© 2021 GitHub, Inc.
+<!DOCTYPE HTML>
+<html leng="ua">
+	<head>
+		<meta charset="utf-8">
+  		<title>22.09.2021</title>
+ 	</head>
+
+ 	<body>
+ 		<center><h1>Галерея Шостака Олександра Петровича</h1></center>
+ 		<section>
+ 		<p><a href="index.html">Назад на головну</a></p>
+ 		<h2>Мої зображення</h2>
+ 		<h3>Зображення у цій папці</h3>
+ 		<a href="images" title="image green"></a>
+ 		<h3>Зображення онлайн</h3>
+ 		<a href="images" title="image black"></a>
+ 	</section>
+ </body>
+ </html>
+
+
