--- a/gallery.html
+++ b/gallery.html
@@ -11,11 +11,12 @@
  		<p><a href="index.html">Назад на головну</a></p>
  		<h2>Мої зображення</h2>
  		<h3>Зображення у цій папці</h3>
- 		<a href="images" title="image green"></a>
+ 		<img src="images">
+ 		<h3>Зображення у папці</h3>
+ 		<img src="images/image green">
  		<h3>Зображення онлайн</h3>
- 		<a href="images" title="image black"></a>
+ 		<img src="https://place-hold.it/1280x1024/green/blue/white&text=WEB">
  	</section>
  </body>
  </html>
-
 
