--- a/Friends.html
+++ b/Friends.html
@@ -1,17 +1,37 @@
 <!DOCTYPE HTML>\
-<html leng="ua">
+<html lang="ua">
 <head>
 		<meta charset="utf-8">
-  		<title>22.09.2021</title>
+  		<title></title>
+  		<style>tr:nth-child(even){
+  background-color: grey;
+}
+table, th, tr{
+
+font-size: 18px;
+padding: 24px;
+text-align: center;
+border-style: groove;
+
+}
+tr{
+  background-color: peru;
+}
+caption{
+	border-color: lightcoral;
+  border: 8px solid;
+  
+}
+</style>
  	</head>
  	<body>
  		<center><h1>Друзі Шостака Олександра Петровича</h1></center>
  		<p><a href="index.html">Назад на головну</a></p>
  		<h2>Мої друзі</h2>
- 		<h3> Table </h3>
+
  		<div>
  			<table>
- 				<caption>Table caption</caption>
+ 				<caption>Мої друзі</caption>
  		<tr>
  			<th>Прізвище</th>
  			<th>Ім'я </th>
@@ -51,5 +71,6 @@
  </div>
 </body>
 </html>
+
 
 
