--- a/biography.html
+++ b/biography.html
@@ -1,39 +1,85 @@
 <!DOCTYPE HTML>
-<html leng="ua">
+<html lang="ua">
 <head>
 		<meta charset="utf-8">
-  		<title>22.09.2021</title>
- 	</head>
- 	<body>
- 		<center><h1>Автобіографія Шостака Олександра Петровича</h1></center>
- 		<p> <a href="index.html">Назад на головну</a> </p>
- 		<li><a href="biography.html">Автобіографія </a></li>
- 		<li><a href="Novadays.html">Сьогодення </a></li>
- 		<li><a href="gallery.html">Галерея</a></li>
- 		<li><a href="Friends.html">Друзі</a></li>
- 		
- 		<p id="zmist"><h1> Зміст: </h1></p>
+  		<title>Автобіографія Шостака Олександра Петровича</title>
+  		<style>
+  		.wв{
+  			text-decoration: none;
+  			color: red;
+  			background-color:yellow ;
+  			text-align: center;
+  			width: 150px;
+  			border: 5px greenyellow;
+  			display: block;
+  			margin-bottom: 5px;
+  		}
+  		.wв:hover{
+  			color: blue;
+  			background-color: burlywood;
+  		}
+ 	.wв:active{
+ 		color: purple;
+ 		background-color: maroon;
+ 	}
+ 	.childhood{
+ 		color: hotpink;
+ 		background-color: grey;
+ 	}
+ 	.school{
+ 		color: burlywood;
+ 		background-color: blue;
+ 	}
+ 	.outschool{
+ 		color: green;
+ 		background-color:blueviolet ;
+ 	}
+ 	.university{
+ 		color:black ;
+ 		background-color: palevioletred;
+ 	}
+ 	.me{
+ 		color: red;
+ 		background-color: skyblue;
+ 	}</style>
+ </head>
+ <body>
+ 	<h1 id="biography">Автобіографія Шостака Олександра Петровича</h1>
+ 	<a href=index.html>Назад на головну</a>
+ 	<h3> <a name="content">Зміст</a></h3>
+ 	<div><a class="wв" href="#inform">Базова інформація</a></div>
+ 	<div><a class="wв" href="#childhood"> Дитинство</a></div>
+ 	<div><a class="wв" href="#school"> Шкільні роки</a></div>
+ 	<div><a class="wв" href="#outschool"> Поза школою</a></div>
+ 	<div><a class="wв" href="#university"> Університет</a></div>
+ 	<article>
+ 		<h2 id="infa">Базова інформація</h2>
+ 		<p class="me">Мене звати Шостак Олександр. Мені 17 років .  Я навчаюсь у Прикарпатському університеті. Народився 23.01.2004року. Живу в Івано - Франківську від народження</p>
+ 			<a href "#content">До змісту</a>
+ 			</article>
+ 			<article>
+ 				<h2 id="child">Дитинство</h2>
+ 				<p class="childhood">Народився і проживаю в Івано-Франківську.В дитинстві був веселою та енергійною дитиною , любив співати та читати книжки.Ще малим мріяв стати співаком.</p>
+ 				<a href "#content">До змісту</a>
+ 				</article>
+ 				<article>
+ 					<h2 id="sch">Шкільні роки</h2>
+ 					<p class="school">Навчався в 23 ліцеї імені Р. Гурика.Приймав участь в багатьох олімпіадах та спортивних гуртках.Вів активну участь в шкільному житті.Навчася добре.</p>
+ 					<a href "#content">До змісту</a>
+ 				</article>
+ 				<article>
+ 					<h2 id="outsch">Поза школою</h2>
+ 					<p class="outschool">Після закінчення школи продовжую спілкування з колишніми однокласниками та деякими вчителями.Продовжую займатися спортом та планую стати майстром спорту по боксу.</p>
+ 					<a href "#content">До змісту</a>
+ 				</article>
+ 				<article>
+ 					<h2 id="univ">Університет</h2>
+ 					<p class="university">В університеті стараюсь здобути потібні знання для подальшої праці в IT.Познайомився з чудовими людьми , включаючи викладачів :)</p>
+ 					<a href "#content">До змісту</a>
+ 				</article>
+ 				<hr>
+ 				<a href="biography">Уверх</a>
+ 			</body>
+ 			</html>
 
- 		<article id="info"><h3>Базова інформація:</h3>
- 		<p>Мене звати Шостак Олександр.Я навчаюсь у Прикарпатському університеті.</p>
- 		<p> До Змісту </p></article>
- 		<a href=" zmist">До Змісту</a>
-
- 		<h3>Дитинство</h3>
- 		<p>Народився і проживаю в Івано-Франківську.</p>
- 		<a href=" zmist">До Змісту</a>
- 		<h3>Шкільні роки</h3>
- 		<p>Навчався в 23 ліцеї імені Р. Гурика.</p>
- 		<a href=" zmist">До Змісту</a>
- 		<h3>Поза школою</h3>
- 		<p>Після закінчення школи продовжую спілкування з колишніми однокласниками.</p>
- 		<a href=" zmist">До Змісту</a>
- 		<h3>Університет</h3>
- 		<p>В університеті стараюсь здобути потібні знання для подальшої праці в IT.</p>
- 		<a href=" zmist">До Змісту</a>
- 		<p> <a href="index.html">Уверх</a> </p>
-
- 		
- 	</body>
- 	</html>
 
