--- a/index.html
+++ b/index.html
@@ -1,24 +1,52 @@
 <!DOCTYPE HTML>
-<html leng="ua">
+<html lang="ua">
 	<head>
 		<meta charset="utf-8">
-  		<title>22.09.2021</title>
- 	</head>
+  		<title>Персональна сторінка Шостака Олександра Петровича</title>
+<style >
+	.biography.html{
+		color: purple;
+	}
+	.biography.html:visited{
+		color: grey;
+	}
+	.Novadays.html{
+		color: blue;
 
+	}
+	.Novadays.html:visited{
+		color: red;
+	}
+	.gallery.html{
+		color: yellow;
+	}
+	.gallery.html:visited{
+		color: brown;
+	}
+	.gallery.html{
+		color: green;
+	}
+	.gallery.html:visited{
+		color:red ;
+	}
+	.Friends.html{
+		color: grey;
+	}
+	.Friends.html:visited{
+		color: blue;
+	}
+
+</style>
+</head>
+ 	
  	<body>
 
  		<h1>Персональна сторінка Шостака Олександра Петровича</h1>
- 		<p> <a href="index.html">Назад на головну</a> </p>
- 		<h2> Зміст: </h2>
-
-
- 		<p>Мене звати Шостак Олександр.</p>
- 		<p>Я навчаюсь у Прикарпатському університеті.</p>
- 		<p>Народився і живу у Івано-Франківську.</p>
- 		<p>У мене невелике коло спілкування,проте друзів вдосталь.</p>
- 		<a href="biography.html">Автобіографія </a>
- 		<a href="Novadays.html">Сьогодення </a>
- 		<a href="gallery.html">Галерея</a>
- 		<a href="Friends.html">Друзі</a>
+ 		
+ 		<p>Мене звати Шостак Олександр. Мені 17 років .  Я навчаюсь у Прикарпатському університеті. Народився 23.01.2004року. Живу в Івано - Франківську від народження . Спочатку навчався в коледжі цього університету , а тепер в університеті. У мене невелике коло спілкування,проте друзів вдосталь.</p>
+ 		<div> <a class="biography" href="biography.html">Автобіографія </a></div>
+ 		<div> <a class="Novadays" href="Novadays.html">Сьогодення </a></div>
+ 		<div> <a class="gallery" href="gallery.html">Галерея</a></div>
+ 		<div> <a class="Friends" href="Friends.html">Друзі</a></div>
 </body>
 </html>
