--- a/gallery.html
+++ b/gallery.html
@@ -1,22 +1,21 @@
 <!DOCTYPE HTML>
-<html leng="ua">
+<html>
 	<head>
 		<meta charset="utf-8">
-  		<title>22.09.2021</title>
+  		<title>Галерея Шостака Олександра Петровича</title>
  	</head>
 
  	<body>
  		<center><h1>Галерея Шостака Олександра Петровича</h1></center>
- 		<section>
+ 		
  		<p><a href="index.html">Назад на головну</a></p>
  		<h2>Мої зображення</h2>
  		<h3>Зображення у цій папці</h3>
- 		<img src="images">
+ 		<img src="images" alt="image black">
  		<h3>Зображення у папці</h3>
  		<img src="images/image green">
  		<h3>Зображення онлайн</h3>
  		<img src="https://place-hold.it/1280x1024/green/blue/white&text=WEB">
- 	</section>
+ 	
  </body>
  </html>
-
