--- a/biography.html
+++ b/biography.html
@@ -54,27 +54,27 @@
  	<div><a class="wв" href="#university"> Університет</a></div>
  	<article>
  		<h2 id="infa">Базова інформація</h2>
- 		<p class="me">Мене звати Шостак Олександр. Мені 17 років .  Я навчаюсь у Прикарпатському університеті. Народився 23.01.2004року. Живу в Івано - Франківську від народження</p>
+ 		<p class="me">Мене звати Шостак Олександр. Мені 17 років .  Я навчаюсь у Прикарпатському університеті. Народився 23.01.2004року. Живу в Івано - Франківську від народження. В дитинстві був енергійною та відкритою дитиною,мав багато різних хобі.</p>
  			<a href "#content">До змісту</a>
  			</article>
  			<article>
  				<h2 id="child">Дитинство</h2>
- 				<p class="childhood">Народився і проживаю в Івано-Франківську.В дитинстві був веселою та енергійною дитиною , любив співати та читати книжки.Ще малим мріяв стати співаком.</p>
+ 				<p class="childhood">Народився і проживаю в Івано-Франківську.В дитинстві був веселою та енергійною дитиною , любив співати та читати книжки.Ще малим мріяв стати співаком.Певний періодчасу жив в селі з бабусею четез те,що батьки працювали в Лондоні.Завжди мріяв там побувати . Недавно здійснив свою мрію. Займався вокалом,тхеквондо,баскетболом,боксом.Завжди любив спорт , але ніколи не любив його дивитись.</p>
  				<a href "#content">До змісту</a>
  				</article>
  				<article>
  					<h2 id="sch">Шкільні роки</h2>
- 					<p class="school">Навчався в 23 ліцеї імені Р. Гурика.Приймав участь в багатьох олімпіадах та спортивних гуртках.Вів активну участь в шкільному житті.Навчася добре.</p>
+ 					<p class="school">Навчався в 23 ліцеї імені Р. Гурика.Приймав участь в багатьох олімпіадах та спортивних гуртках.Вів активну участь в шкільному житті.Навчася добре , хоча вчив в більшості тільки те що мені подобається.Часто був старостою . В класі мав авторитет серед однокласників.</p>
  					<a href "#content">До змісту</a>
  				</article>
  				<article>
  					<h2 id="outsch">Поза школою</h2>
- 					<p class="outschool">Після закінчення школи продовжую спілкування з колишніми однокласниками та деякими вчителями.Продовжую займатися спортом та планую стати майстром спорту по боксу.</p>
+ 					<p class="outschool">Після закінчення школи продовжую спілкування з колишніми однокласниками та деякими вчителями.Продовжую займатися спортом та планую стати майстром спорту по боксу.Часто навідую деяких вчителів.Часто сумую за школою .</p>
  					<a href "#content">До змісту</a>
  				</article>
  				<article>
  					<h2 id="univ">Університет</h2>
- 					<p class="university">В університеті стараюсь здобути потібні знання для подальшої праці в IT.Познайомився з чудовими людьми , включаючи викладачів :)</p>
+ 					<p class="university">В університеті стараюсь здобути потібні знання для подальшої праці в IT.Покищо не все вдається , але я намагаюсь все вчити.Нас часто переводять на дистанційне навчання , але завдяки викладачам ми не відстаємо . Я познайомився з чудовими людьми , включаючи викладачів :)</p>
  					<a href "#content">До змісту</a>
  				</article>
  				<hr>
